# boost_asio_bluetooth

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  boost_asio_bluetoothConfig.cmake.in  conan2file.py  conanfile.py  version.py
.github/workflows/: cmake-single-platform.yml
cmake/: Config.cmake  Lib.cmake
demo/: echoclient.cpp  echoserver.cpp
include/asio_bluetooth/: bluetooth.hpp  bluetooth_utils.h  wrapper.h
include/asio_bluetooth/detail/: endpoint.hpp
src/: wrapper.cpp
